--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="me.regalstreak.wallpapers">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -22,7 +23,18 @@
         </activity>
         <activity
             android:name=".WallpaperStuff"
-            android:theme="@style/WallPaperStuffTheme"></activity>
+            android:theme="@style/WallPaperStuffTheme" />
+        <activity android:name=".DisclaimerActivity" />
+        <activity
+            android:name=".WallPreview"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_wall_preview"
+            android:parentActivityName=".WallpaperStuff"
+            android:theme="@style/WallPreviewTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="me.regalstreak.wallpapers.WallpaperStuff" />
+        </activity>
     </application>
 
 </manifest>
