--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,14 +24,17 @@
         </activity>
         <activity
             android:name=".WallpaperStuff"
-            android:theme="@style/WallPaperStuffTheme" />
-        <activity android:name=".DisclaimerActivity" />
+            android:theme="@style/WallPaperStuffTheme"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".DisclaimerActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".WallPreview"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_wall_preview"
             android:parentActivityName=".WallpaperStuff"
-            android:theme="@style/WallPreviewTheme">
+            android:theme="@style/WallPreviewTheme"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="me.regalstreak.wallpapers.WallpaperStuff" />
