--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.SET_WALLPAPER"/>
+    <uses-permission android:name="android.permission.SET_WALLPAPER" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -16,30 +16,34 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".WallpaperStuff"
-            android:theme="@style/WallPaperStuffTheme"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".DisclaimerActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/WallPaperStuffTheme" />
+        <activity
+            android:name=".DisclaimerActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".WallPreview"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_wall_preview"
             android:parentActivityName=".WallpaperStuff"
-            android:theme="@style/WallPreviewTheme"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/WallPreviewTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="me.regalstreak.wallpapers.WallpaperStuff" />
+        </activity>
+        <activity
+            android:name=".SplashScreen"
+            android:theme="@style/Theme.Design.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
