app: Swipe left to go back from WallpaperStuff

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".WallPreview" />
+        <activity android:name=".TestActibity"></activity>
     </application>
 
 </manifest>
