--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    compile 'com.hannesdorfmann:swipeback:1.0.4'
 }
